homelab/searxng/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: searxng
  annotations:
    argocd.argoproj.io/sync-wave: "0"
